# owned_str

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  owned_str.rs  unsized_str.rs  utils.rs
