[package]
name = "owned_str"
version = "0.1.1"
edition = "2021"
authors = ["Baptiste de Montangon"]
license = "MIT"
repository = "https://github.com/Baptistemontan/owned_str"
description = "Provide a stack allocated String for no-std or const environement"
readme = "./README.md"

[dependencies]

[features]
